--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 * {
   font-family: "Roboto", sans-serif;
 }
+
+@layer components {
+  .container {
+    @apply mx-auto flex max-w-screen-xl gap-6 px-6 py-10 sm:gap-8;
+  }
+}
